# Hands-On

./: week1.py
Week 1/: exercise.md  linux.md  practice.md
Week 2/: bankaccount.py  encapsulation.py  example.py  exer.py  fundamentals.md  inheritance.md  inheritance.py  specialmethods.md
Week 3/: Week 1.code-workspace  conda.md  generator.py  poetry.md  virtualenv.md
Week 3/Error Handling/: exceptions.md  se.md
Week 3/exercise/: aync.py  cm.py  customexception.py  decorator.py  primegen.py
Week 3/exercise/my_project/: README.md  main.py  poetry.md  pyproject.toml
Week 4/: configgenerator.py  number_guessing.pkl  pickle_example.py
Week 4/File System/: file.md  file.py  workfile
Week 6/: main.py
