[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "bsg-sunzid",email = "sunzid.islam@blockstak.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
